trying a cleaner demo

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.123",
-    "@types/react": "^16.8.12",
+    "@types/react": "16.8.11",
     "@types/react-dom": "^16.8.3",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^2.1.1",
@@ -28,21 +28,23 @@
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.0",
     "style-loader": "^0.23.1",
-    "typescript": "^3.4.1",
+    "typescript": "^3.4.2",
     "typescript-styled-plugin": "^0.14.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-bundle-analyzer": "^3.2.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1",
     "webpack-hud": "^0.1.2"
   },
   "dependencies": {
     "@jimengio/ruled-router": "^0.2.7",
+    "@jimengio/shared-utils": "^0.1.1",
+    "antd": "^3.16.2",
     "dayjs": "^1.8.12",
     "emotion": "^10.0.9",
     "font-awesome": "^4.7.0",
-    "immer": "^2.1.4",
+    "immer": "^2.1.5",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
