--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "immer": "^2.1.5",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "use-immer": "^0.1.0"
   }
 }
