--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.123",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
@@ -45,6 +46,7 @@
     "emotion": "^10.0.9",
     "font-awesome": "^4.7.0",
     "immer": "^2.1.5",
+    "is": "^3.3.0",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
