--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@types/lodash": "^4.14.123",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
-    "awesome-typescript-loader": "^5.2.1",
+    "cache-loader": "^2.0.1",
     "css-loader": "^2.1.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^1.0.2",
     "html-webpack-include-assets-plugin": "^1.0.10",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.0",
     "style-loader": "^0.23.1",
+    "thread-loader": "^2.1.2",
+    "ts-loader": "^5.3.3",
     "typescript": "^3.4.3",
     "typescript-styled-plugin": "^0.14.0",
     "url-loader": "^1.1.2",
@@ -50,6 +53,6 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "use-immer": "^0.1.0"
+    "use-immer": "^0.2.1"
   }
 }
