--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "mst-workflow",
-  "version": "1.0.0",
+  "name": "@jimengio/meson-form",
+  "version": "0.1.0-a4",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/form.js",
+  "types": "./lib/form.d.ts",
   "scripts": {
     "dev": "webpack-dev-server --hot --config webpack/dev.js",
     "watch": "webpack-dev-server --hot --config webpack/dev.js",
@@ -11,6 +12,8 @@
     "release": "rm -rfv dist/* && yarn dll-release && time webpack --progress --config webpack/release.js",
     "build": "yarn release",
     "serve": "http-server dist/ -s",
+    "compile": "tsc -d --project tsconfig-compile.json --outDir lib/",
+    "upload": "rsync -avr --progress dist/ fe.jimu.io:~/repo/jimengio/meson-form",
     "postinstall": "rm -rfv node_modules/@types/*/node_modules/@types/react"
   },
   "keywords": [],
@@ -40,21 +43,21 @@
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1",
-    "webpack-hud": "^0.1.2"
+    "webpack-hud": "^0.1.2",
+    "@jimengio/ruled-router": "^0.2.7"
   },
   "dependencies": {
-    "@jimengio/jimo-icons": "^0.1.14",
-    "@jimengio/ruled-router": "^0.2.7",
-    "@jimengio/shared-utils": "^0.1.1",
+    "@jimengio/jimo-icons": "*",
+    "@jimengio/shared-utils": "*",
     "antd": "^3.16.3",
-    "dayjs": "^1.8.12",
-    "emotion": "^10.0.9",
+    "dayjs": "*",
+    "emotion": "*",
     "font-awesome": "^4.7.0",
-    "immer": "^2.1.5",
-    "is": "^3.3.0",
-    "lodash": "^4.17.11",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "immer": "*",
+    "is": "*",
+    "lodash": "*",
+    "react": "*",
+    "react-dom": "*",
     "react-transition-group": "^3.0.0",
     "use-immer": "^0.2.1"
   }
