--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.1.3-a2",
+  "version": "0.1.3",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
@@ -15,6 +15,7 @@
     "compile": "tsc -d --project tsconfig-compile.json --outDir lib/",
     "prepare": "yarn compile",
     "upload": "rsync -avr --progress dist/ fe.jimu.io:~/repo/jimengio/meson-form",
+    "prepublishOnly": "yarn release & yarn upload",
     "postinstall": "rm -rfv node_modules/@types/*/node_modules/@types/react"
   },
   "keywords": [],
