--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.1.6",
+  "version": "0.1.7-a3",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
