--- a/package.json
+++ b/package.json
@@ -22,45 +22,45 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@jimengio/ruled-router": "^0.2.7",
+    "@jimengio/jimo-icons": "^0.1.17",
+    "@jimengio/ruled-router": "^0.2.9",
+    "@jimengio/shared-utils": "^0.1.3",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.123",
-    "@types/react": "^16.8.13",
+    "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
     "@types/react-transition-group": "^2.9.0",
-    "cache-loader": "^2.0.1",
+    "antd": "^3.16.6",
+    "cache-loader": "^3.0.0",
     "css-loader": "^2.1.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.0.2",
-    "html-webpack-include-assets-plugin": "^1.0.10",
+    "fork-ts-checker-webpack-plugin": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-tags-plugin": "^2.0.10",
     "http-server": "^0.11.0",
+    "immer": "*",
+    "react": "*",
+    "react-dom": "*",
     "style-loader": "^0.23.1",
     "thread-loader": "^2.1.2",
-    "ts-loader": "^5.3.3",
-    "typescript": "^3.4.3",
+    "ts-loader": "^5.4.4",
+    "typescript": "^3.4.5",
     "typescript-styled-plugin": "^0.14.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.0",
+    "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1",
-    "antd": "^3.16.3",
-    "immer": "*",
-    "react": "*",
-    "react-dom": "*",
-    "@jimengio/jimo-icons": "*",
-    "@jimengio/shared-utils": "*",
     "webpack-hud": "^0.1.2"
   },
   "peerDependencies": {
+    "@jimengio/jimo-icons": "*",
+    "@jimengio/shared-utils": "*",
     "antd": "^3.16.3",
     "immer": "*",
     "react": "*",
-    "react-dom": "*",
-    "@jimengio/jimo-icons": "*",
-    "@jimengio/shared-utils": "*"
+    "react-dom": "*"
   },
   "dependencies": {
     "dayjs": "*",
@@ -68,7 +68,7 @@
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash": "*",
-    "react-transition-group": "^3.0.0",
+    "react-transition-group": "^4.0.0",
     "use-immer": "^0.2.2"
   }
 }
