--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "useTabs": false,
   "printWidth": 160,
   "trailingComma": "es5",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "parser": "typescript"
 }
