--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "yarn compile",
     "upload": "rsync -avr --progress dist/ fe.jimu.io:~/repo/jimengio/meson-form",
     "prepublishOnly": "yarn release & yarn upload",
+    "gen-router": "webpack --config webpack/router-config.js && node dist/gen-router.js",
     "postinstall": "rm -rfv node_modules/@types/*/node_modules/@types/react"
   },
   "keywords": [],
@@ -23,10 +24,13 @@
   "license": "ISC",
   "devDependencies": {
     "@jimengio/jimo-icons": "^0.1.17",
+    "@jimengio/router-code-generator": "^0.1.2",
     "@jimengio/ruled-router": "^0.2.9",
     "@jimengio/shared-utils": "^0.1.3",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.123",
+    "@types/node": "^11.13.8",
+    "@types/prettier": "^1.16.3",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
     "@types/react-transition-group": "^2.9.0",
@@ -40,11 +44,13 @@
     "html-webpack-tags-plugin": "^2.0.10",
     "http-server": "^0.11.0",
     "immer": "*",
+    "prettier": "^1.17.0",
     "react": "*",
     "react-dom": "*",
     "style-loader": "^0.23.1",
     "thread-loader": "^2.1.2",
     "ts-loader": "^5.4.4",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.4.5",
     "typescript-styled-plugin": "^0.14.0",
     "url-loader": "^1.1.2",
