--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.1.10",
+  "version": "0.1.11-a1",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
@@ -75,6 +75,6 @@
     "is": "*",
     "lodash": "*",
     "react-transition-group": "^4.0.0",
-    "use-immer": "^0.2.2"
+    "use-immer": "*"
   }
 }
