--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,5 @@
   "useTabs": false,
   "printWidth": 160,
   "trailingComma": "es5",
-  "arrowParens": "always",
-  "parser": "typescript"
+  "arrowParens": "always"
 }
