--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "webpack-dev-server --hot --config webpack/dev.js",
     "dll": "rm -rfv webpack/dll/* && time webpack --config webpack/dll-dev.js",
     "dll-release": "time webpack --config webpack/dll-release.js",
-    "release": "rm -rfv dist/* && yarn dll-release && time webpack --progress --config webpack/release.js",
+    "release": "rm -rfv dist/* && yarn dll-release && time webpack --config webpack/release.js",
     "build": "yarn release",
     "serve": "http-server dist/ -s",
     "compile": "tsc -d --project tsconfig-compile.json --outDir lib/",
@@ -23,41 +23,41 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@jimengio/jimo-icons": "^0.1.17",
-    "@jimengio/router-code-generator": "^0.1.2",
+    "@jimengio/jimo-icons": "^0.1.19",
+    "@jimengio/router-code-generator": "^0.1.4",
     "@jimengio/ruled-router": "^0.2.10",
     "@jimengio/shared-utils": "^0.1.3",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "^11.13.8",
-    "@types/prettier": "^1.16.3",
-    "@types/react": "^16.8.15",
+    "@types/lodash": "^4.14.132",
+    "@types/node": "^12.0.2",
+    "@types/prettier": "^1.16.4",
+    "@types/react": "^16.8.18",
     "@types/react-dom": "^16.8.4",
-    "@types/react-transition-group": "^2.9.0",
-    "antd": "^3.16.6",
-    "cache-loader": "^3.0.0",
+    "@types/react-transition-group": "^2.9.1",
+    "antd": "^3.18.2",
+    "cache-loader": "^3.0.1",
     "css-loader": "^2.1.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.2.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.4",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.10",
+    "html-webpack-tags-plugin": "^2.0.12",
     "http-server": "^0.11.0",
-    "immer": "*",
-    "prettier": "^1.17.0",
+    "immer": "3.1.2",
+    "prettier": "^1.17.1",
     "react": "*",
     "react-dom": "*",
     "style-loader": "^0.23.1",
     "thread-loader": "^2.1.2",
-    "ts-loader": "^5.4.4",
+    "ts-loader": "^6.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.4.5",
     "typescript-styled-plugin": "^0.14.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.30.0",
+    "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
     "webpack-hud": "^0.1.2"
   },
   "peerDependencies": {
@@ -69,12 +69,12 @@
     "react-dom": "*"
   },
   "dependencies": {
-    "dayjs": "*",
+    "dayjs": "1.8.14",
     "emotion": "*",
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash": "*",
-    "react-transition-group": "^4.0.0",
+    "react-transition-group": "^4.0.1",
     "use-immer": "*"
   }
 }
