--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.1.11",
+  "version": "0.1.12-a1",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
@@ -15,7 +15,7 @@
     "compile": "tsc -d --project tsconfig-compile.json --outDir lib/",
     "prepare": "yarn compile",
     "upload": "rsync -avr --progress dist/ fe.jimu.io:~/repo/jimengio/meson-form",
-    "prepublishOnly": "yarn release & yarn upload",
+    "up": "yarn release && yarn upload",
     "gen-router": "webpack --config webpack/router-config.js && node dist/gen-router.js",
     "postinstall": "rm -rfv node_modules/@types/*/node_modules/@types/react"
   },
