--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.2.5",
+  "version": "0.2.6-a1",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
@@ -24,9 +24,12 @@
   "license": "ISC",
   "devDependencies": {
     "@jimengio/doc-frame": "^0.1.0",
+    "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/jimo-icons": "^0.1.19",
+    "@jimengio/meson-display": "^0.1.4",
     "@jimengio/router-code-generator": "^0.1.4",
     "@jimengio/ruled-router": "^0.2.15",
+    "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.3",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.132",
@@ -62,8 +65,11 @@
     "webpack-hud": "^0.1.2"
   },
   "peerDependencies": {
+    "@jimengio/fa-icons": "*",
     "@jimengio/jimo-icons": "*",
+    "@jimengio/meson-display": "*",
     "@jimengio/shared-utils": "*",
+    "@jimengio/safe-property": "*",
     "antd": "^3.18.2",
     "immer": "*",
     "react": "*",
