--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.2.6-a1",
+  "version": "0.2.6-a4",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
@@ -23,65 +23,65 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.0",
+    "@jimengio/doc-frame": "^0.1.1",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-icons": "^0.1.19",
-    "@jimengio/meson-display": "^0.1.4",
-    "@jimengio/router-code-generator": "^0.1.4",
+    "@jimengio/jimo-icons": "^0.1.22",
+    "@jimengio/meson-display": "^0.1.5",
+    "@jimengio/router-code-generator": "^0.1.5",
     "@jimengio/ruled-router": "^0.2.15",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.3",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.132",
-    "@types/node": "^12.0.2",
-    "@types/prettier": "^1.16.4",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-transition-group": "^2.9.1",
-    "antd": "^3.18.2",
-    "cache-loader": "^3.0.1",
-    "css-loader": "^2.1.1",
+    "@types/lodash": "^4.14.136",
+    "@types/node": "^12.7.0",
+    "@types/prettier": "^1.18.1",
+    "@types/react": "^16.8.24",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-transition-group": "^4.2.1",
+    "antd": "^3.21.2",
+    "cache-loader": "^4.1.0",
+    "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.3.4",
+    "file-loader": "^4.1.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.12",
+    "html-webpack-tags-plugin": "^2.0.13",
     "http-server": "^0.11.0",
-    "immer": "3.1.2",
-    "prettier": "^1.17.1",
+    "immer": "3.2.0",
+    "prettier": "^1.18.2",
     "react": "*",
     "react-dom": "*",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "thread-loader": "^2.1.2",
-    "ts-loader": "^6.0.1",
+    "ts-loader": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.4.5",
+    "typescript": "^3.5.3",
     "typescript-styled-plugin": "^0.14.0",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.32.2",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.1",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
     "webpack-hud": "^0.1.2"
   },
   "peerDependencies": {
     "@jimengio/fa-icons": "*",
     "@jimengio/jimo-icons": "*",
     "@jimengio/meson-display": "*",
-    "@jimengio/shared-utils": "*",
     "@jimengio/safe-property": "*",
+    "@jimengio/shared-utils": "*",
     "antd": "^3.18.2",
     "immer": "*",
     "react": "*",
     "react-dom": "*"
   },
   "dependencies": {
-    "dayjs": "1.8.14",
+    "dayjs": "*",
     "emotion": "*",
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash": "*",
-    "react-transition-group": "^4.0.1",
+    "react-transition-group": "^4.2.2",
     "use-immer": "*"
   }
 }
