--- a/package.json
+++ b/package.json
@@ -25,34 +25,34 @@
   "devDependencies": {
     "@jimengio/doc-frame": "^0.1.1",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-icons": "^0.1.22",
-    "@jimengio/meson-display": "^0.1.5",
+    "@jimengio/jimo-icons": "^0.1.24",
+    "@jimengio/meson-display": "^0.1.6",
     "@jimengio/router-code-generator": "^0.1.5",
     "@jimengio/ruled-router": "^0.2.15",
     "@jimengio/safe-property": "^0.0.2",
-    "@jimengio/shared-utils": "^0.1.3",
+    "@jimengio/shared-utils": "^0.1.4-a1",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.136",
-    "@types/node": "^12.7.0",
+    "@types/node": "^12.7.1",
     "@types/prettier": "^1.18.1",
-    "@types/react": "^16.8.24",
+    "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
-    "@types/react-transition-group": "^4.2.1",
-    "antd": "^3.21.2",
+    "@types/react-transition-group": "^4.2.2",
+    "antd": "^3.21.4",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "file-loader": "^4.1.0",
+    "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.13",
     "http-server": "^0.11.0",
     "immer": "3.2.0",
     "prettier": "^1.18.2",
-    "react": "*",
-    "react-dom": "*",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "style-loader": "^1.0.0",
-    "thread-loader": "^2.1.2",
+    "thread-loader": "^2.1.3",
     "ts-loader": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.5.3",
@@ -61,7 +61,7 @@
     "webpack": "^4.39.1",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.8.0",
     "webpack-hud": "^0.1.2"
   },
   "peerDependencies": {
