--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepare": "yarn compile",
     "upload": "rsync -avr --progress dist/ fe.jimu.io:~/repo/jimengio/meson-form",
     "up": "yarn release && yarn upload",
-    "gen-router": "webpack --config webpack/router-config.js && node dist/gen-router.js",
+    "gen-router": "ts-node -P tsconfig-node.json -r tsconfig-paths/register example/gen-router.ts",
     "postinstall": "rm -rfv node_modules/@types/*/node_modules/@types/react"
   },
   "keywords": [],
@@ -54,6 +54,8 @@
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
+    "tsconfig-paths": "^3.8.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.5.3",
     "typescript-styled-plugin": "^0.14.0",
