--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.2.11-a2",
+  "version": "0.2.11",
   "description": "",
   "main": "./lib/form.js",
   "types": "./lib/form.d.ts",
