render docs with doc-frame

--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.1",
+    "@jimengio/doc-frame": "^0.1.2-a3",
     "@jimengio/dropdown": "^0.1.11",
     "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/jimo-icons": "^0.1.26",
+    "@jimengio/meson-modal": "^0.2.13",
     "@jimengio/router-code-generator": "^0.1.5",
     "@jimengio/ruled-router": "^0.2.15",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5-a1",
-    "@jimengio/meson-modal": "^0.2.13",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.138",
     "@types/node": "^12.7.2",
@@ -50,6 +50,7 @@
     "http-server": "^0.11.0",
     "immer": "3.2.0",
     "prettier": "^1.18.2",
+    "raw-loader": "^3.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "style-loader": "^1.0.0",
@@ -71,9 +72,9 @@
     "@jimengio/dropdown": "*",
     "@jimengio/fa-icons": "*",
     "@jimengio/jimo-icons": "*",
+    "@jimengio/meson-modal": "*",
     "@jimengio/safe-property": "*",
     "@jimengio/shared-utils": "*",
-    "@jimengio/meson-modal": "*13",
     "antd": "^3.18.2",
     "immer": "*",
     "react": "*",
