--- a/package.json
+++ b/package.json
@@ -23,49 +23,49 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.2-a3",
-    "@jimengio/dropdown": "^0.1.11",
+    "@jimengio/doc-frame": "^0.1.2",
+    "@jimengio/dropdown": "^0.1.12",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-icons": "^0.1.26",
-    "@jimengio/meson-modal": "^0.2.13",
-    "@jimengio/router-code-generator": "^0.2.0",
-    "@jimengio/ruled-router": "^0.2.15",
+    "@jimengio/jimo-icons": "^0.2.3",
+    "@jimengio/meson-modal": "^0.2.14",
+    "@jimengio/router-code-generator": "^0.2.4-a4",
+    "@jimengio/ruled-router": "^0.2.16",
     "@jimengio/safe-property": "^0.0.2",
-    "@jimengio/shared-utils": "^0.1.5-a1",
+    "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.138",
-    "@types/node": "^12.7.2",
-    "@types/prettier": "^1.18.2",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-transition-group": "^4.2.2",
-    "antd": "^3.22.2",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "^12.11.5",
+    "@types/prettier": "^1.18.3",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-transition-group": "^4.2.3",
+    "antd": "^3.24.2",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.1",
     "html-webpack-plugin": "^3.2.0",
-    "html-webpack-tags-plugin": "^2.0.15",
+    "html-webpack-tags-plugin": "^2.0.17",
     "http-server": "^0.11.0",
-    "immer": "3.2.0",
+    "immer": "^4.0.2",
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
-    "ts-loader": "^6.0.4",
-    "ts-node": "^8.3.0",
-    "tsconfig-paths": "^3.8.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.4.1",
+    "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.3",
-    "typescript-styled-plugin": "^0.14.0",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.3",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0",
+    "typescript": "^3.6.4",
+    "typescript-styled-plugin": "^0.15.0",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0",
     "webpack-hud": "^0.1.2"
   },
   "peerDependencies": {
@@ -86,7 +86,7 @@
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash": "*",
-    "react-transition-group": "^4.2.2",
+    "react-transition-group": "^4.3.0",
     "use-immer": "*"
   }
 }
