--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.3.1",
+  "version": "0.3.3-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -23,20 +23,20 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.2",
+    "@jimengio/doc-frame": "^0.1.3-a1",
     "@jimengio/dropdown": "^0.1.12",
     "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/jimo-icons": "^0.2.3",
     "@jimengio/meson-modal": "^0.2.14",
-    "@jimengio/router-code-generator": "^0.2.4-a4",
-    "@jimengio/ruled-router": "^0.2.16",
+    "@jimengio/router-code-generator": "^0.2.4",
+    "@jimengio/ruled-router": "^0.2.17",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.144",
-    "@types/node": "^12.11.5",
+    "@types/node": "^12.11.7",
     "@types/prettier": "^1.18.3",
-    "@types/react": "^16.9.9",
+    "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.2",
     "@types/react-transition-group": "^4.2.3",
     "antd": "^3.24.2",
@@ -44,7 +44,7 @@
     "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.1",
+    "fork-ts-checker-webpack-plugin": "^1.6.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "http-server": "^0.11.0",
