add centerTitle property

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.3.2-a2",
+  "version": "0.3.2-a3",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -27,7 +27,7 @@
     "@jimengio/dropdown": "^0.1.12",
     "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/jimo-icons": "^0.2.3",
-    "@jimengio/meson-modal": "^0.2.14",
+    "@jimengio/meson-modal": "^0.2.16",
     "@jimengio/router-code-generator": "^0.2.4",
     "@jimengio/ruled-router": "^0.2.17",
     "@jimengio/safe-property": "^0.0.2",
@@ -72,7 +72,7 @@
     "@jimengio/dropdown": "*",
     "@jimengio/fa-icons": "*",
     "@jimengio/jimo-icons": "*",
-    "@jimengio/meson-modal": "*",
+    "@jimengio/meson-modal": ">=0.2.16",
     "@jimengio/safe-property": "*",
     "@jimengio/shared-utils": "*",
     "antd": "^3.18.2",
