--- a/package.json
+++ b/package.json
@@ -23,32 +23,32 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.3-a1",
-    "@jimengio/dropdown": "^0.1.12",
+    "@jimengio/doc-frame": "^0.1.5-a3",
+    "@jimengio/dropdown": "^0.1.13",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-icons": "^0.2.3",
-    "@jimengio/meson-modal": "^0.2.16",
-    "@jimengio/router-code-generator": "^0.2.4",
-    "@jimengio/ruled-router": "^0.2.17",
+    "@jimengio/jimo-icons": "^0.2.4",
+    "@jimengio/meson-modal": "^0.2.17",
+    "@jimengio/router-code-generator": "^0.2.5",
+    "@jimengio/ruled-router": "^0.2.19",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "^12.11.7",
+    "@types/lodash": "^4.14.145",
+    "@types/node": "^12.12.6",
     "@types/prettier": "^1.18.3",
     "@types/react": "^16.9.10",
-    "@types/react-dom": "^16.9.2",
+    "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.24.2",
+    "antd": "^3.25.0",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^1.6.0",
+    "fork-ts-checker-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "http-server": "^0.11.0",
-    "immer": "^4.0.2",
+    "immer": "^5.0.0",
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0",
     "react": "16.11.0",
@@ -59,12 +59,12 @@
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.6.4",
+    "typescript": "^3.7.2",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.9",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
     "webpack-hud": "^0.1.2"
   },
@@ -81,12 +81,12 @@
     "react-dom": "*"
   },
   "dependencies": {
-    "dayjs": "*",
-    "emotion": "*",
+    "dayjs": "1.8.17",
+    "emotion": "10.0.23",
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash": "*",
     "react-transition-group": "^4.3.0",
-    "use-immer": "*"
+    "use-immer": "0.3.5"
   }
 }
