--- a/package.json
+++ b/package.json
@@ -23,40 +23,41 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.5-a3",
+    "@jimengio/doc-frame": "^0.1.6",
     "@jimengio/dropdown": "^0.1.13",
     "@jimengio/fa-icons": "^0.2.0",
+    "@jimengio/jimo-basics": "^0.0.1-a4",
     "@jimengio/jimo-icons": "^0.2.4",
-    "@jimengio/meson-modal": "^0.2.17",
+    "@jimengio/meson-modal": "^0.2.18",
     "@jimengio/router-code-generator": "^0.2.5",
     "@jimengio/ruled-router": "^0.2.19",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.145",
-    "@types/node": "^12.12.6",
+    "@types/lodash": "^4.14.146",
+    "@types/node": "^12.12.7",
     "@types/prettier": "^1.18.3",
     "@types/react": "^16.9.10",
     "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.25.0",
+    "antd": "^3.25.1",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^4.2.0",
-    "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "fork-ts-checker-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "http-server": "^0.11.0",
     "immer": "^5.0.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "raw-loader": "^3.1.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.4.1",
+    "ts-node": "^8.5.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.2",
