--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.6",
+    "@jimengio/doc-frame": "^0.1.8-a1",
     "@jimengio/dropdown": "^0.1.13",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.0.1-a4",
-    "@jimengio/jimo-icons": "^0.2.4",
-    "@jimengio/meson-modal": "^0.2.18",
+    "@jimengio/jimo-basics": "^0.0.1",
+    "@jimengio/jimo-icons": "^0.3.0",
+    "@jimengio/meson-modal": "^0.2.21",
     "@jimengio/router-code-generator": "^0.2.5",
-    "@jimengio/ruled-router": "^0.2.19",
+    "@jimengio/ruled-router": "^0.2.21",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.146",
-    "@types/node": "^12.12.7",
-    "@types/prettier": "^1.18.3",
-    "@types/react": "^16.9.10",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.12.12",
+    "@types/prettier": "^1.19.0",
+    "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.25.1",
+    "antd": "^3.25.2",
     "cache-loader": "^4.1.0",
     "css-loader": "^3.2.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
     "fork-ts-checker-webpack-plugin": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
@@ -52,17 +52,17 @@
     "immer": "^5.0.0",
     "prettier": "^1.19.1",
     "raw-loader": "^3.1.0",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
     "style-loader": "^1.0.0",
     "thread-loader": "^2.1.3",
     "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.0",
+    "ts-node": "^8.5.2",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.2",
     "typescript-styled-plugin": "^0.15.0",
-    "url-loader": "^2.2.0",
+    "url-loader": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
