add FooterButtons component from new design; alpha release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.3.7",
+  "version": "0.3.8-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -24,9 +24,9 @@
   "license": "MIT",
   "devDependencies": {
     "@jimengio/doc-frame": "^0.1.8",
-    "@jimengio/dropdown": "^0.1.19",
+    "@jimengio/dropdown": "^0.1.21",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.0.3",
+    "@jimengio/jimo-basics": "^0.0.5",
     "@jimengio/jimo-icons": "^0.3.1",
     "@jimengio/meson-modal": "^0.3.1",
     "@jimengio/router-code-generator": "^0.2.5",
@@ -35,21 +35,21 @@
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.14",
+    "@types/node": "^12.12.17",
     "@types/prettier": "^1.19.0",
-    "@types/react": "^16.9.15",
+    "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.26.0",
+    "antd": "^3.26.2",
     "cache-loader": "^4.1.0",
-    "css-loader": "^3.2.1",
+    "css-loader": "^3.3.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-tags-plugin": "^2.0.17",
     "http-server": "^0.12.0",
-    "immer": "^5.0.0",
+    "immer": "^5.0.1",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.0",
     "react": "16.12.0",
@@ -87,6 +87,7 @@
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash": "*",
+    "lodash-es": "^4.17.15",
     "react-transition-group": "^4.3.0",
     "use-immer": "0.3.5"
   }
