upgrade deps; export FooterButtons; release 0.3.10

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.3.8",
+  "version": "0.3.10",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -23,26 +23,26 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.8",
-    "@jimengio/dropdown": "^0.1.21",
+    "@jimengio/doc-frame": "^0.1.9",
+    "@jimengio/dropdown": "^0.1.22",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.0.5",
-    "@jimengio/jimo-icons": "^0.3.1",
-    "@jimengio/meson-modal": "^0.3.1",
+    "@jimengio/jimo-basics": "^0.0.8",
+    "@jimengio/jimo-icons": "^0.3.2-a1",
+    "@jimengio/meson-modal": "^0.3.2",
     "@jimengio/router-code-generator": "^0.2.5",
     "@jimengio/ruled-router": "^0.2.21",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.17",
+    "@types/node": "^12.12.18",
     "@types/prettier": "^1.19.0",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.26.2",
+    "antd": "^3.26.3",
     "cache-loader": "^4.1.0",
-    "css-loader": "^3.3.0",
+    "css-loader": "^3.3.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "file-loader": "^5.0.2",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
@@ -63,7 +63,7 @@
     "typescript": "^3.7.3",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.3",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0",
