upgrade deps and replace lodash with lodash-es

--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@jimengio/jimo-icons": "^0.3.2-a1",
     "@jimengio/meson-modal": "^0.3.2",
     "@jimengio/router-code-generator": "^0.2.5",
-    "@jimengio/ruled-router": "^0.2.21",
+    "@jimengio/ruled-router": "^0.2.22",
     "@jimengio/safe-property": "^0.0.2",
     "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
-    "@types/lodash": "^4.14.149",
+    "@types/lodash-es": "^4.17.3",
     "@types/node": "^12.12.18",
     "@types/prettier": "^1.19.0",
     "@types/react": "^16.9.16",
@@ -86,7 +86,6 @@
     "emotion": "10.0.23",
     "font-awesome": "^4.7.0",
     "is": "*",
-    "lodash": "*",
     "lodash-es": "^4.17.15",
     "react-transition-group": "^4.3.0",
     "use-immer": "0.3.5"
