upgrade deps; drop shared-utils; alpha release

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.4",
+  "version": "0.4.5-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -22,16 +22,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.11",
-    "@jimengio/dropdown": "^0.1.27",
+    "@jimengio/doc-frame": "^0.1.12",
+    "@jimengio/dropdown": "^0.1.28",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.0.13-a1",
-    "@jimengio/jimo-icons": "^0.3.4",
-    "@jimengio/meson-modal": "^0.3.3",
+    "@jimengio/jimo-basics": "^0.0.17",
+    "@jimengio/jimo-icons": "^0.3.9",
+    "@jimengio/meson-modal": "^0.3.6-a1",
     "@jimengio/router-code-generator": "^0.2.6-a1",
     "@jimengio/ruled-router": "^0.2.22",
     "@jimengio/safe-property": "^0.0.2",
-    "@jimengio/shared-utils": "^0.1.5",
     "@types/is": "^0.0.21",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^13.7.1",
@@ -75,10 +74,9 @@
     "@jimengio/jimo-icons": "*",
     "@jimengio/meson-modal": ">=0.2.16",
     "@jimengio/safe-property": "*",
-    "@jimengio/shared-utils": "*",
-    "moment": "^2.24.0",
     "antd": "^3.18.2",
     "immer": "*",
+    "moment": "^2.24.0",
     "react": "*",
     "react-dom": "*"
   },
