try if there's bugs in using antd 4.x in meson-form

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.5-a1",
+  "version": "0.4.5-a1-dev1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -21,47 +21,48 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@ant-design/icons": "^4.0.5",
     "@jimengio/doc-frame": "^0.1.12",
     "@jimengio/dropdown": "^0.1.28",
     "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/jimo-basics": "^0.0.17",
     "@jimengio/jimo-icons": "^0.3.9",
     "@jimengio/meson-modal": "^0.3.6-a1",
-    "@jimengio/router-code-generator": "^0.2.6-a1",
-    "@jimengio/ruled-router": "^0.2.22",
+    "@jimengio/router-code-generator": "^0.2.6",
+    "@jimengio/ruled-router": "^0.2.25",
     "@jimengio/safe-property": "^0.0.2",
     "@types/is": "^0.0.21",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^13.7.1",
-    "@types/prettier": "^1.19.0",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-transition-group": "^4.2.3",
-    "antd": "^3.26.9",
+    "@types/node": "^13.11.0",
+    "@types/prettier": "^2.0.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-transition-group": "^4.2.4",
+    "antd": "^4.1.1",
     "cache-loader": "^4.1.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "file-loader": "^5.0.2",
-    "fork-ts-checker-webpack-plugin": "^4.0.3",
-    "html-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "html-webpack-plugin": "^4.0.4",
     "html-webpack-tags-plugin": "^2.0.17",
-    "immer": "^5.3.6",
+    "immer": "^6.0.3",
     "moment": "^2.24.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.4",
     "raw-loader": "^4.0.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
     "style-loader": "^1.1.3",
     "thread-loader": "^2.1.3",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "ts-loader": "^6.2.2",
+    "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.7.5",
+    "typescript": "^3.8.3",
     "typescript-styled-plugin": "^0.15.0",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "url-loader": "^4.0.0",
+    "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "webpack-hud": "^0.1.2"
@@ -79,12 +80,12 @@
     "react-dom": "*"
   },
   "dependencies": {
-    "dayjs": "1.8.20",
+    "dayjs": "1.8.23",
     "emotion": "10.0.27",
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash-es": "^4.17.15",
     "react-transition-group": "^4.3.0",
-    "use-immer": "0.3.5"
+    "use-immer": "0.4.0"
   }
 }
