try if there's bugs in using antd 4.x in meson-form

--- a/tsconfig-compile.json
+++ b/tsconfig-compile.json
@@ -7,6 +7,7 @@
     "noImplicitThis": true,
     "strictNullChecks": false,
     "moduleResolution": "node",
+    "importsNotUsedAsValues": "preserve",
     "module": "esnext",
     "target": "es2015",
     "jsx": "react",
@@ -19,8 +20,5 @@
     ]
   },
   "include": ["src/*.ts", "src/*.tsx", "src/*/*.ts"],
-  "exclude": ["lib/*"],
-  "awesomeTypescriptLoaderOptions": {
-    "useCache": true
-  }
+  "exclude": ["lib/*"]
 }
