--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jimengio/meson-form",
-  "version": "0.4.22",
+  "version": "0.5.0-a1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -21,48 +21,49 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@jimengio/doc-frame": "^0.1.12",
+    "@ant-design/icons": "^4.2.2",
+    "@jimengio/doc-frame": "^0.1.13",
     "@jimengio/dropdown": "^0.1.38",
     "@jimengio/fa-icons": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.1.10-a1",
-    "@jimengio/jimo-icons": "^0.3.11",
+    "@jimengio/flex-styles": "^0.2.0",
+    "@jimengio/jimo-basics": "^0.1.11",
+    "@jimengio/jimo-icons": "^0.3.14",
     "@jimengio/meson-modal": "^0.3.10",
     "@jimengio/rex": "^0.1.8",
-    "@jimengio/router-code-generator": "^0.2.7",
-    "@jimengio/ruled-router": "^0.2.25",
+    "@jimengio/router-code-generator": "^0.3.0",
+    "@jimengio/ruled-router": "^0.2.27",
     "@jimengio/safe-property": "^0.0.2",
-    "@jimengio/flex-styles": "^0.2.0-a1",
     "@types/is": "^0.0.21",
     "@types/lodash-es": "^4.17.3",
-    "@types/node": "^14.0.13",
-    "@types/prettier": "^2.0.1",
-    "@types/react": "^16.9.38",
+    "@types/node": "^14.6.4",
+    "@types/prettier": "^2.1.0",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-transition-group": "^4.4.0",
-    "antd": "^3.26.18",
+    "antd": "^4.6.3",
     "cache-loader": "^4.1.0",
-    "css-loader": "^3.6.0",
+    "css-loader": "^4.2.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "file-loader": "^6.0.0",
-    "fork-ts-checker-webpack-plugin": "^5.0.2",
-    "html-webpack-plugin": "^4.3.0",
+    "file-loader": "^6.1.0",
+    "fork-ts-checker-webpack-plugin": "^5.1.0",
+    "html-webpack-plugin": "^4.4.1",
     "html-webpack-tags-plugin": "^2.0.17",
-    "immer": "^7.0.1",
+    "immer": "^7.0.8",
     "moment": "^2.27.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.1",
     "raw-loader": "^4.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "style-loader": "^1.2.1",
     "thread-loader": "^2.1.3",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^8.10.2",
+    "ts-loader": "^8.0.3",
+    "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.8.5",
+    "typescript": "^4.0.2",
     "typescript-styled-plugin": "^0.15.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
@@ -71,10 +72,10 @@
   "peerDependencies": {
     "@jimengio/dropdown": "*",
     "@jimengio/fa-icons": "*",
+    "@jimengio/flex-styles": "^0.2.0-a1",
     "@jimengio/jimo-icons": "*",
     "@jimengio/meson-modal": ">=0.2.16",
     "@jimengio/safe-property": "*",
-    "@jimengio/flex-styles": "^0.2.0-a1",
     "antd": "^3.18.2",
     "immer": "*",
     "moment": "^2.24.0",
@@ -82,12 +83,12 @@
     "react-dom": "*"
   },
   "dependencies": {
-    "dayjs": "^1.8.28",
+    "dayjs": "^1.8.35",
     "emotion": "^10.0.27",
     "font-awesome": "^4.7.0",
     "is": "*",
     "lodash-es": "^4.17.15",
     "react-transition-group": "^4.4.1",
-    "use-immer": "^0.4.0"
+    "use-immer": "^0.4.1"
   }
 }
