--- a/tsconfig-node.json
+++ b/tsconfig-node.json
@@ -7,6 +7,7 @@
     "noImplicitThis": true,
     "strictNullChecks": false,
     "moduleResolution": "node",
+    "importsNotUsedAsValues": "preserve",
     "module": "commonjs",
     "target": "es2016",
     "jsx": "react",
