--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": false,
+    "importsNotUsedAsValues": "preserve",
     "moduleResolution": "node",
     "module": "esnext",
     "target": "es2015",
