refactor(button): del jimo-basics

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "@jimengio/dropdown": "^0.1.38",
     "@jimengio/fa-icons": "^0.2.0",
     "@jimengio/flex-styles": "^0.2.0",
-    "@jimengio/jimo-basics": "^0.1.11",
     "@jimengio/jimo-icons": "^0.3.14",
-    "@jimengio/meson-modal": "^0.3.10",
+    "@jimengio/meson-modal": "^0.3.11",
     "@jimengio/rex": "^0.1.8",
     "@jimengio/router-code-generator": "^0.3.0",
     "@jimengio/ruled-router": "^0.2.27",
@@ -44,6 +43,7 @@
     "cache-loader": "^4.1.0",
     "css-loader": "^4.2.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "emotion": "^10.0.27",
     "file-loader": "^6.1.0",
     "fork-ts-checker-webpack-plugin": "^5.1.0",
     "html-webpack-plugin": "^4.4.1",
@@ -72,10 +72,10 @@
   },
   "peerDependencies": {
     "@jimengio/dropdown": "*",
-    "@jimengio/flex-styles": "^0.2.0-a1",
+    "@jimengio/flex-styles": "^0.2.0",
     "@jimengio/jimo-icons": "*",
     "@jimengio/meson-modal": ">=0.2.16",
-    "antd": "^3.18.2",
+    "antd": "^4.6.0",
     "emotion": "*",
     "immer": "*",
     "moment": "^2.24.0",
